input-sys/src/gen.rs

extern "C" {
    /**
 * @ingroup tablet_pad_modes
 *
 * Devices without mode switching capabilities return true for every button.
 *
 * @param group A previously obtained mode group
 * @param button A button index, starting at 0
 * @return true if the given button index is part of this mode group or
 * false otherwise
 */
    pub fn libinput_tablet_pad_mode_group_has_button(group:
                                                         *mut libinput_tablet_pad_mode_group,
                                                     button: libc::c_uint)
     -> libc::c_int;
}
extern "C" {
    /**
 * @ingroup tablet_pad_modes
 *
 * Devices without mode switching capabilities return true for every ring.
 *
 * @param group A previously obtained mode group
 * @param ring A ring index, starting at 0
 * @return true if the given ring index is part of this mode group or
 * false otherwise
 */
    pub fn libinput_tablet_pad_mode_group_has_ring(group:
                                                       *mut libinput_tablet_pad_mode_group,
                                                   ring: libc::c_uint)
     -> libc::c_int;
}
extern "C" {
    /**
 * @ingroup tablet_pad_modes
 *
 * Devices without mode switching capabilities return true for every strip.
 *
 * @param group A previously obtained mode group
 * @param strip A strip index, starting at 0
 * @return true if the given strip index is part of this mode group or
 * false otherwise
 */
    pub fn libinput_tablet_pad_mode_group_has_strip(group:
                                                        *mut libinput_tablet_pad_mode_group,
                                                    strip: libc::c_uint)
     -> libc::c_int;
}
extern "C" {
    /**
 * @ingroup tablet_pad_modes
 *
 * The toggle button in a mode group is the button assigned to cycle to or
 * directly assign a new mode when pressed. Not all devices have a toggle
 * button and some devices may have more than one toggle button. For
 * example, the Wacom Cintiq 24HD has six toggle buttons in two groups, each
 * directly selecting one of the three modes per group.
 *
 * Devices without mode switching capabilities return false for every button.
 *
 * @param group A previously obtained mode group
 * @param button A button index, starting at 0
 * @retval non-zero if the button is a mode toggle button for this group, or
 * zero otherwise
 */
    pub fn libinput_tablet_pad_mode_group_button_is_toggle(group:
                                                               *mut libinput_tablet_pad_mode_group,
                                                           button:
                                                               libc::c_uint)
     -> libc::c_int;
}
extern "C" {
    /**
 * @ingroup tablet_pad_modes
 *
 * Increase the refcount of the mode group. A mode group will be
 * freed whenever the refcount reaches 0.
 *
 * @param group A previously obtained mode group
 * @return The passed mode group
 */
    pub fn libinput_tablet_pad_mode_group_ref(group:
                                                  *mut libinput_tablet_pad_mode_group)
     -> *mut libinput_tablet_pad_mode_group;
}
extern "C" {
    /**
 * @ingroup tablet_pad_modes
 *
 * Decrease the refcount of the mode group. A mode group will be
 * freed whenever the refcount reaches 0.
 *
 * @param group A previously obtained mode group
 * @return NULL if the group was destroyed, otherwise the passed mode group
 */
    pub fn libinput_tablet_pad_mode_group_unref(group:
                                                    *mut libinput_tablet_pad_mode_group)
     -> *mut libinput_tablet_pad_mode_group;
}
extern "C" {
    /**
 * @ingroup tablet_pad_modes
 *
 * Set caller-specific data associated with this mode group. libinput does
 * not manage, look at, or modify this data. The caller must ensure the
 * data is valid.
 *
 * @param group A previously obtained mode group
 * @param user_data Caller-specific data pointer
 * @see libinput_tablet_pad_mode_group_get_user_data
 *
 */
    pub fn libinput_tablet_pad_mode_group_set_user_data(group:
                                                            *mut libinput_tablet_pad_mode_group,
                                                        user_data:
                                                            *mut libc::c_void);
}
extern "C" {
    /**
 * @ingroup tablet_pad_modes
 *
 * Get the caller-specific data associated with this mode group, if any.
 *
 * @param group A previously obtained mode group
 * @return Caller-specific data pointer or NULL if none was set
 * @see libinput_tablet_pad_mode_group_set_user_data
 */
    pub fn libinput_tablet_pad_mode_group_get_user_data(group:
                                                            *mut libinput_tablet_pad_mode_group)
     -> *mut libc::c_void;
}
#[repr(u32)]
/**
 * @ingroup device
 *
 * The state of a switch. The default state of a switch is @ref
 * LIBINPUT_SWITCH_STATE_OFF and no event is sent to confirm a switch in the
 * off position. If a switch is logically on during initialization, libinput
 * sends an event of type @ref LIBINPUT_EVENT_SWITCH_TOGGLE with a state
 * @ref LIBINPUT_SWITCH_STATE_ON.
 */
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum libinput_switch_state {
    LIBINPUT_SWITCH_STATE_OFF = 0,
    LIBINPUT_SWITCH_STATE_ON = 1,
}
#[repr(u32)]
/**
 * @ingroup device
 *
 * The type of a switch.
 */
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum libinput_switch { LIBINPUT_SWITCH_LID = 1, }
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct libinput_event_switch([u8; 0]);
#[repr(u32)]
/**
 * @ingroup base
 *
 * Event type for events returned by libinput_get_event().
 */
#[derive(Debug, Copy, Clone, PartialEq, Eq, Hash)]
pub enum libinput_event_type {
    LIBINPUT_EVENT_NONE = 0,
    LIBINPUT_EVENT_DEVICE_ADDED = 1,
    LIBINPUT_EVENT_DEVICE_REMOVED = 2,
    LIBINPUT_EVENT_KEYBOARD_KEY = 300,
    LIBINPUT_EVENT_POINTER_MOTION = 400,
    LIBINPUT_EVENT_POINTER_MOTION_ABSOLUTE = 401,
    LIBINPUT_EVENT_POINTER_BUTTON = 402,
    LIBINPUT_EVENT_POINTER_AXIS = 403,
    LIBINPUT_EVENT_TOUCH_DOWN = 500,
    LIBINPUT_EVENT_TOUCH_UP = 501,
    LIBINPUT_EVENT_TOUCH_MOTION = 502,
    LIBINPUT_EVENT_TOUCH_CANCEL = 503,
    LIBINPUT_EVENT_TOUCH_FRAME = 504,
    LIBINPUT_EVENT_TABLET_TOOL_AXIS = 600,
    LIBINPUT_EVENT_TABLET_TOOL_PROXIMITY = 601,
    LIBINPUT_EVENT_TABLET_TOOL_TIP = 602,
    LIBINPUT_EVENT_TABLET_TOOL_BUTTON = 603,
    LIBINPUT_EVENT_TABLET_PAD_BUTTON = 700,
    LIBINPUT_EVENT_TABLET_PAD_RING = 701,
    LIBINPUT_EVENT_TABLET_PAD_STRIP = 702,
    LIBINPUT_EVENT_GESTURE_SWIPE_BEGIN = 800,
    LIBINPUT_EVENT_GESTURE_SWIPE_UPDATE = 801,
    LIBINPUT_EVENT_GESTURE_SWIPE_END = 802,
    LIBINPUT_EVENT_GESTURE_PINCH_BEGIN = 803,
    LIBINPUT_EVENT_GESTURE_PINCH_UPDATE = 804,
    LIBINPUT_EVENT_GESTURE_PINCH_END = 805,
    LIBINPUT_EVENT_SWITCH_TOGGLE = 900,
}
extern "C" {
    /**
 * @ingroup event
 *
 * Destroy the event, freeing all associated resources. Resources obtained
 * from this event must be considered invalid after this call.
 *
 * @warning Unlike other structs events are considered transient and
 * <b>not</b> refcounted. Calling libinput_event_destroy() <b>will</b>
 * destroy the event.
 *
 * @param event An event retrieved by libinput_get_event().
 */
    pub fn libinput_event_destroy(event: *mut libinput_event);
}
extern "C" {
    /**
 * @ingroup event
 *
 * Get the type of the event.
 *
 * @param event An event retrieved by libinput_get_event().
 */
    pub fn libinput_event_get_type(event: *mut libinput_event)
     -> libinput_event_type;
}
extern "C" {
    /**
 * @ingroup event
 *
 * Get the libinput context from the event.
 *
 * @param event The libinput event
 * @return The libinput context for this event.
 */
    pub fn libinput_event_get_context(event: *mut libinput_event)
     -> *mut libinput;
}
extern "C" {
    /**
 * @ingroup event
 *
 * Return the device associated with this event. For device added/removed
 * events this is the device added or removed. For all other device events,
 * this is the device that generated the event.
 *
 * This device is not refcounted and its lifetime is that of the event. Use
 * libinput_device_ref() before using the device outside of this scope.
 *
 * @return The device associated with this event
 */
    pub fn libinput_event_get_device(event: *mut libinput_event)
     -> *mut libinput_device;
}
extern "C" {
    /**
 * @ingroup event
 *
 * Return the pointer event that is this input event. If the event type does
 * not match the pointer event types, this function returns NULL.
 *
 * The inverse of this function is libinput_event_pointer_get_base_event().
 *
 * @return A pointer event, or NULL for other events
 */
    pub fn libinput_event_get_pointer_event(event: *mut libinput_event)
     -> *mut libinput_event_pointer;
}
extern "C" {
    /**
 * @ingroup event
 *
 * Return the keyboard event that is this input event. If the event type does
 * not match the keyboard event types, this function returns NULL.
 *
 * The inverse of this function is libinput_event_keyboard_get_base_event().
 *
 * @return A keyboard event, or NULL for other events
 */
    pub fn libinput_event_get_keyboard_event(event: *mut libinput_event)
     -> *mut libinput_event_keyboard;
}
extern "C" {
    /**
 * @ingroup event
 *
 * Return the touch event that is this input event. If the event type does
 * not match the touch event types, this function returns NULL.
 *
 * The inverse of this function is libinput_event_touch_get_base_event().
 *
 * @return A touch event, or NULL for other events
 */
    pub fn libinput_event_get_touch_event(event: *mut libinput_event)
     -> *mut libinput_event_touch;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct libinput_event_gesture([u8; 0]);
extern "C" {
    /**
 * @ingroup event
 *
 * Return the gesture event that is this input event. If the event type does
 * not match the gesture event types, this function returns NULL.
 *
 * The inverse of this function is libinput_event_gesture_get_base_event().
 *
 * @return A gesture event, or NULL for other events
 */
    pub fn libinput_event_get_gesture_event(event: *mut libinput_event)
     -> *mut libinput_event_gesture;
}
extern "C" {
    /**
 * @ingroup event
 *
 * Return the tablet tool event that is this input event. If the event type
 * does not match the tablet tool event types, this function returns NULL.
 *
 * The inverse of this function is libinput_event_tablet_tool_get_base_event().
 *
 * @return A tablet tool event, or NULL for other events
 */
    pub fn libinput_event_get_tablet_tool_event(event: *mut libinput_event)
     -> *mut libinput_event_tablet_tool;
}
extern "C" {
    /**
 * @ingroup event
 *
 * Return the tablet pad event that is this input event. If the event type does not
 * match the tablet pad event types, this function returns NULL.
 *
 * The inverse of this function is libinput_event_tablet_pad_get_base_event().
 *
 * @return A tablet pad event, or NULL for other events
 */
    pub fn libinput_event_get_tablet_pad_event(event: *mut libinput_event)
     -> *mut libinput_event_tablet_pad;
}
extern "C" {
    /**
 * @ingroup event
 *
 * Return the switch event that is this input event. If the event type does
 * not match the switch event types, this function returns NULL.
 *
 * The inverse of this function is libinput_event_switch_get_base_event().
 *
 * @return A switch event, or NULL for other events
 */
    pub fn libinput_event_get_switch_event(event: *mut libinput_event)
     -> *mut libinput_event_switch;
}
